miniextendr-macros/tests/ui/derive_rnative_not_newtype.rs
//! Test: derive RNativeType on non-newtype struct should fail.

use miniextendr_macros::RNativeType;

#[derive(RNativeType)]
struct Bad {
    a: i32,
    b: i32,
}

fn main() {}
